removed phone number added media query meta

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="fontawesome/css/all.css">
 	<title>contact</title>
@@ -38,10 +39,10 @@
 			<label>EMAIL</label>
 			<a href="mailto:abj@gmail.com" target="_blank">abj@gmail.com</a>
 		</p>
-		<p class="add">
+		<!-- <p class="add">
 			<label>PHONE NUMBER</label>
 			<a href="tel:09044448869" target="_blank">09044448869</a>
-		</p>
+		</p> -->
 	</div>
 	
 	  <footer>
