--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
      				<label>birthdate</label>
      				<span>15-07-05</span>
      			</p>
-     			<p>
+<!--      			<p>
      				<label>phone</label>
      				<span>07038443643</span>
-     			</p>
+     			</p> -->
      			<p>
      				<label>email</label>
      				<span>isioma@gmail.com</span>
@@ -118,8 +118,7 @@
           <P>INTERIOR DESIGNS</P>
      </div>
     </div>
-  
-               </span>  <footer>
+   <footer>
          <div>
                <span class="circle">
                     <i class="fab fa-facebook"></i>
