--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="fontawesome/css/all.css">
 	<title>about</title>
@@ -21,78 +22,78 @@
 		</div>
 	</header>
 	<div class="about-banner">
-			<h1>About me</h1>
+		<h1>About me</h1>
 	</div>
-	 </div>
-       <div class="About">
+     <div class="About">
      <p class="intro">Hello I'm Isioma Aghuno,I am a web designer and also a cake designer. I am a student of the prestigious Marymount College.</p>
      <div class="info">
-     	<div>
-     		<h2>Personal Details</h2>
-     		<div class="details">
-     			<p>
-     				<label>birthdate</label>
-     				<span>15-07-05</span>
-     			</p>
-     			<p>
-     				<label>phone</label>
-     				<span>07038443643</span>
-     			</p>
-     			<p>
-     				<label>email</label>
-     				<span>emmanuellaisioma7@gmail.com</span>
-     			</p>
-     			<p>
-     				<label>address</label>
-     				<span>Gwagwalada ABUJA</span>
-     			</p>
-     			<p>
-     				<label>website</label>
-     				<span>isioma.netlify.app</span>
-     			</p>
-     		</div>
-     	</div>
-     	<div>
-     		<h2>My Interests</h2>
-     		<div class="interest">
-     			<div>
-     				<i class="fas fa-gamepad"></i>
-     				<h3>games</h3>
-     			</div>
-     			<div>
-     				<i class="fas fa-music"></i>
-     				<h3>music</h3>
-     			</div>
-     			<div>
-     				<i class="fas fa-plane"></i>
-     				<h3>travel</h3>
-     			</div>
-     			<div>
-     				<i class="fas fa-coffee"></i>
-     				<h3>coffee</h3>
-     			</div>
-     			<div>
-     				<i class="fas fa-laptop"></i>
-     				<h3>coding</h3>
-     			</div>
-     			<div>
-     				<i class="fas fa-bed"></i>
-     				<h3>sleep</h3>
-     			</div>
-     			<div>
-     				<i class="fas fa-globe"></i>
-     				<h3>browsing</h3>
-     			</div>
+          <div>
+               <h2>Personal Details</h2>
+               <div class="details">
+                    <p>
+                         <label>birthdate</label>
+                         <span>15-07-05</span>
+                    </p>
+<!--                     <p>
+                         <label>phone</label>
+                         <span>07038443643</span>
+                    </p> -->
+                    <p>
+                         <label>email</label>
+                         <span>isioma@gmail.com</span>
+                    </p>
+                    <p>
+                         <label>address</label>
+                         <span>Gwagwalada ABUJA</span>
+                    </p>
+                    <p>
+                         <label>website</label>
+                         <span>isioma.netlify.app</span>
+                    </p>
+               </div>
+          </div>
+          <div>
+               <h2>My Interests</h2>
+               <div class="interest">
+                    <div>
+                         <i class="fas fa-gamepad"></i>
+                         <h3>games</h3>
+                    </div>
+                    <div>
+                         <i class="fas fa-music"></i>
+                         <h3>music</h3>
+                    </div>
+                    <div>
+                         <i class="fas fa-plane"></i>
+                         <h3>travel</h3>
+                    </div>
+                    <div>
+                         <i class="fas fa-coffee"></i>
+                         <h3>coffee</h3>
+                    </div>
+                    <div>
+                         <i class="fas fa-laptop"></i>
+                         <h3>coding</h3>
+                    </div>
+                    <div>
+                         <i class="fas fa-bed"></i>
+                         <h3>sleep</h3>
+                    </div>
+                    <div>
+                         <i class="fas fa-globe"></i>
+                         <h3>browsing</h3>
+                    </div>
                     <div>
                          <i class="fas fa-video"></i>
                          <h3>movies</h3>
                     </div>
-     		</div>
-     	</div>
+               </div>
+          </div>
 
      </div>
     </div>
-	  <footer>
+
+     <footer>
          <div>
                <span class="circle">
                     <i class="fab fa-facebook"></i>
